# ferroedge

./: .env.example  .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SYSTEM_DESIGN.md  docker-compose.yml  prometheus.yml
.claude/: settings.json
.github/workflows/: ci.yml
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  module.rs  types.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: edge.proto
crates/proto/src/: client.rs  lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: init.rs  lib.rs  metrics.rs  prometheus_server.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/benches/: wasm_execution.rs
crates/wasm-runtime/src/: cache.rs  engine.rs  lib.rs  sandbox.rs  tests.rs
services/control-plane/: Cargo.toml  Dockerfile
services/control-plane/src/: circuit_breaker.rs  config.rs  connection_pool.rs  health.rs  lib.rs  main.rs  registry.rs  state.rs
services/control-plane/src/api/: handlers.rs  mod.rs  routes.rs
services/control-plane/src/scheduler/: least_loaded.rs  mod.rs  round_robin.rs
services/edge-node/: Cargo.toml  Dockerfile
services/edge-node/src/: config.rs  downloader.rs  lib.rs  main.rs  metrics.rs  state.rs
services/edge-node/src/executor/: sandbox.rs
services/edge-node/src/server/: grpc.rs  mod.rs
services/load-tester/: Cargo.toml
services/load-tester/src/: main.rs
tests/: Cargo.toml
tests/tests/: integration_test.rs  stress_test.rs
