[workspace]
resolver = "2"
members = [
    "services/control-plane",
    "services/edge-node",
    "services/load-tester",
    "crates/common",
    "crates/telemetry",
    "crates/wasm-runtime",
    "crates/proto",
    "tests",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tonic = "0.11"
prost = "0.12"
axum = "0.7"
tower = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# Observability
opentelemetry        = { version = "0.23", features = ["trace"] }
opentelemetry-otlp   = { version = "0.16", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk    = { version = "0.23", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.24"
prometheus           = "0.13"
lazy_static          = "1"
