[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry        = { workspace = true }
opentelemetry-otlp   = { workspace = true }
opentelemetry_sdk    = { workspace = true }
prometheus           = { workspace = true }
lazy_static          = { workspace = true }
axum               = { workspace = true }
tokio              = { workspace = true }
