[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
base64 = { workspace = true }
tonic  = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
opentelemetry        = { workspace = true }
tracing-opentelemetry = { workspace = true }
common    = { path = "../../crates/common" }
telemetry = { path = "../../crates/telemetry" }
proto     = { path = "../../crates/proto" }
