[package]
name = "edge-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
prometheus = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
opentelemetry        = { workspace = true }
tracing-opentelemetry = { workspace = true }
common = { path = "../../crates/common" }
telemetry = { path = "../../crates/telemetry" }
proto = { path = "../../crates/proto" }
wasm-runtime = { path = "../../crates/wasm-runtime" }
